# dj-usb-tkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYING  Cargo.toml  LICENSE  README.md  TODO.md
.github/: FUNDING.yml
.github/workflows/: release.yml
backend/: Cargo.toml  README.md  TAURI_INTEGRATION.md
backend/src/: commands.rs  db.rs  edb.rs  error.rs  lib.rs  logging.rs  metadata.rs  models.rs  pdb_reader.rs  pdb_writer.rs  player.rs  scanner.rs  shape_compare.rs  tauri_commands.rs  utils.rs  wav_format.rs
backend/src/service/: analysis.rs  anlz.rs  bpm_key.rs  diagnostics.rs  export.rs  export_log.rs  mod.rs  repair.rs  usb.rs  usb_helpers.rs  usb_utils.rs  usb_vendor_compat.rs
backend/src/service/export_helpers/: export_paths.rs  mod.rs  pdb_encoding.rs  pdb_menu.rs  playlist_ops.rs
backend/src/usb_formats/: export_ext.rs  mod.rs  usbmng.rs
backend/tests/: anlz_pipeline_functional.rs  cdj_menu_config_functional.rs  core_command_contract_functional.rs  db_schema_functional.rs  diagnostics_functional.rs  export_functional.rs  export_shape_parity_functional.rs  lib_integration.rs  pdb_rb_fixture_conventions.rs  pdb_writer_functional.rs  playlist_dedupe_functional.rs  scan_incremental_functional.rs  user_flow_functional.rs
backend/tests/fixtures/audio/formats/: track_format_aif.aif  track_format_flac.flac
backend/tests/fixtures/json/: analyzer_expected.json  legacy_pdb_duration_samples.json
desktop/: README.md  package-lock.json  package.json  run-wayland.sh
desktop/scripts/: essentia_runner.cjs
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: APP_DATA_MODEL.md  CDJ_TEST_MATRIX.md  COMMANDS.md  DIAGNOSTICS_REPAIRS.md  LIBRARY_ANALYSIS.md  PDB.md  PLAYLISTS_PLAYBACK.md  README.md  RELEASE_BUILD_INSTALL.md  THIRD_PARTY_LICENSES.md  USB_EXPORT.md  USB_IMPORT.md  WAVEFORMS.md  eDB.md
scripts/: Dockerfile.linux-build  linux-release-docker.sh  macos-build-setup.sh  release.sh  sync_versions.mjs  tauri.release.conf.json  windows-build-setup.ps1
vanilla-ui/: README.md  api_client.mjs  app_state.mjs  event_log.mjs  index.html  job_manager.mjs  key_hue.mjs  main.js  message_bus.mjs  package-lock.json  package.json  playback_match.js  playback_source_label.js  playback_ui_state.js  playwright.config.mjs  settings_keys.mjs  startup_bootstrap.mjs  styles.css  track_table.mjs  track_utils.mjs  ui_controller.mjs  ui_utils.mjs  update_check.mjs  waveform.mjs
vanilla-ui/assets/fonts/LICENSES/: ATTRIBUTIONS.md
vanilla-ui/components/event-log/: actions.mjs  events.mjs
vanilla-ui/components/playback/: actions.mjs
vanilla-ui/components/playlist/: actions.mjs  events.mjs
vanilla-ui/components/settings/: actions.mjs  events.mjs
vanilla-ui/components/shared/: track_actions.mjs
vanilla-ui/components/shell/: actions.mjs  events.mjs
vanilla-ui/components/usb/: actions.mjs  events.mjs
vanilla-ui/scripts/: build.mjs  check-message-handling.mjs
vanilla-ui/tests/: analysis_engine.test.mjs  analysis_flow.test.mjs  analysis_hydration.test.mjs  analysis_patch.test.mjs  analysis_settings.test.mjs  api_client.test.mjs  app_state.test.mjs  components_split_smoke.test.mjs  cover_fallback_handlers.test.mjs  cover_url_protocol.test.mjs  diagnostics_ui_behavior.test.mjs  dom_builders.test.mjs  dom_wiring_jsdom.test.mjs  escape_html.test.mjs  event_log.test.mjs  event_log_ui.test.mjs  event_unlisten.test.mjs  job_manager.test.mjs  library_component_events.test.mjs  library_pagination.test.mjs  library_rendering_ui.test.mjs  library_source_filter_ui.test.mjs  library_workflows.test.mjs  local_track_resolution.test.mjs  logging_setup.test.mjs  media_paths.test.mjs  message_bus.test.mjs  playback_controller.test.mjs  playback_match.test.mjs  playback_push_events.test.mjs  playback_resolution_behavior.test.mjs  playback_source_label.test.mjs  playback_start_dedupe.test.mjs  playback_ui.test.mjs  playback_ui_state.test.mjs  playlist_add_flow_behavior.test.mjs  playlist_analysis_actions.test.mjs  playlist_aria_linking.test.mjs  playlist_delete_confirm.test.mjs  playlist_ops_ui.test.mjs  (+25 more)
vanilla-ui/tests/e2e/: empty_states.spec.mjs  playlist_analysis_actions.spec.mjs  scan_analysis_batches.spec.mjs  selection_add.spec.mjs  smoke.spec.mjs  sort_cycling.spec.mjs  source_root_removal.spec.mjs  static-server.mjs  usb_flows.spec.mjs  waveform_startup_hydration.spec.mjs
